# Autonomous-Quant-Trading-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
ai-analyst/: ANALYST.md  ANTI_PATTERNS.md  EDGE_TAXONOMY.md  MEMORY.md  STRATEGY_LIBRARY.md  WEEKLY_ANALYST.md
configs/: default.yaml
docs/design/: research-desk.md
docs/specs/: README.md  backtest-engine.md  dsr.md  hrp.md
launchd/: README.md  com.terrancehan.quant-daily-audit.plist  com.terrancehan.quant-daily-report.plist  com.terrancehan.quant-daily-trade.plist  com.terrancehan.quant-monthly-review.plist  com.terrancehan.quant-sp500-refresh.plist  com.terrancehan.quant-weekly-review.plist  install.sh  uninstall.sh
reference/: README.md
reference/universe/: sp500.csv  sp500_sectors.csv  sp500_top100.csv  sp500_top50.csv
src/quant/: __init__.py  config.py
src/quant/agent/: __init__.py  ai_analyst.py  audit.py  daily_runner.py  email_sender.py  ensemble.py  improver.py  log.py  monthly_diagnostics.py  monthly_review.py  params.py  regime_gate.py  reliability.py  reports.py  sp500_refresh.py  strategy_sandbox.py  weekly_review.py
src/quant/allocator/: __init__.py  hrp.py  sizing.py
src/quant/backtest/: __init__.py  engine.py  portfolio.py  types.py
src/quant/data/: __init__.py  alpaca_client.py  cache.py  integrity.py  universe.py
src/quant/evaluation/: __init__.py  dsr.py  metrics.py  signal_health.py  walk_forward.py
src/quant/execution/: __init__.py  alpaca_executor.py
src/quant/factors/: __init__.py  attribution.py  library.py
src/quant/registry/: __init__.py  registry.py
src/quant/reports/: __init__.py  tearsheet.py
src/quant/research/: __init__.py  ab_test.py  ledger.py  promotion.py  readiness.py  shadow_queue.py
src/quant/risk/: __init__.py  deployment.py  overlay.py  regime.py
src/quant/strategies/: __init__.py  cross_sectional_momentum.py  mean_reversion.py  sma_crossover.py
src/quant/util/: __init__.py  benchmarks.py  equity_stats.py  retry.py
tests/: conftest.py
tests/integration/: test_alpaca_data.py
tests/unit/: test_ab_test.py  test_agent_daily_runner.py  test_agent_ensemble.py  test_agent_params_and_improver.py  test_agent_reviews.py  test_ai_analyst.py  test_alpaca_client.py  test_alpaca_executor.py  test_audit.py  test_backtest_types.py  test_benchmarks.py  test_cache.py  test_config.py  test_cross_sectional_momentum.py  test_curate_sp500_membership.py  test_deployment.py  test_dsr.py  test_email_sender.py  test_engine.py  test_factors.py  test_hrp.py  test_integrity.py  test_mean_reversion.py  test_metrics.py  test_monthly_diagnostics.py  test_portfolio.py  test_readiness.py  test_regime.py  test_regime_gate.py  test_registry.py  test_reliability.py  test_reports.py  test_risk_overlay.py  test_shadow_promotion.py  test_signal_health.py  test_sizing.py  test_sma_crossover.py  test_smoke.py  test_sp500_refresh.py  test_strategy_sandbox.py  (+8 more)
tools/: curate_sp500_membership.py  preview_regime_policy.py  run_factor_attribution.py  validate_deployment_policy.py  validate_sizing_changes.py
